traversal.snake.Snake.scala.error
Compilation error:
Snake:12: error: type mismatch;
 found   : String("Direction.EST")
 required: plm.universe.Direction
    case "Direction.EST" => gauche(); if(estFaceMur){
         ^Snake:12: error: type mismatch;
 found   : Unit
 required: Boolean
    case "Direction.EST" => gauche(); if(estFaceMur){
                                      ^